Change navbar height and media queries

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Krzysztof Zwolak's website"
     />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Krzysztof Zwolak</title>
   </head>
   <body>
