Correct CSS file distribution

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Krzysztof Zwolak's website"
+      content="Krzysztof Zwolak"
     />
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Krzysztof Zwolak</title>
